FETCH ALL USERS API DONE + LOGIN API DONE

--- a/src/app/pages/apps/sale/customers/customers.component.html
+++ b/src/app/pages/apps/sale/customers/customers.component.html
@@ -12,7 +12,8 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">First Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="First Name" [(ngModel)]="ADDED_CUSTOMER.first_name" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="First Name" [(ngModel)]="ADDED_CUSTOMER.first_name"
+              (ngModelChange)="onInputChange()" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -28,7 +29,8 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Last Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Last Name" [(ngModel)]="ADDED_CUSTOMER.last_name" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="Last Name" [(ngModel)]="ADDED_CUSTOMER.last_name"
+              (ngModelChange)="onInputChange()" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -44,7 +46,8 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Company Name (optional)</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Company Name (OPTIONAL)" [(ngModel)]="ADDED_CUSTOMER.company_name" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="Company Name (OPTIONAL)" [(ngModel)]="ADDED_CUSTOMER.company_name"
+              (ngModelChange)="onInputChange()" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -64,7 +67,8 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Email (optional)</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Email (OPTIONAL)" [(ngModel)]="ADDED_CUSTOMER.email" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="Email (OPTIONAL)" [(ngModel)]="ADDED_CUSTOMER.email"
+              (ngModelChange)="onInputChange()" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -74,29 +78,30 @@
             </mat-icon>
           </mat-form-field>
         </div>
-                <!-- country code -->
-                <div class="col-md-4 d-flex flex-column">
-                  <div class="d-flex align-items-center">
-                    <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Country Code</mat-label>
-                  </div>
-                  <mat-form-field appearance="outline" class="w-100">
-                    <input matInput placeholder="Country Code" [(ngModel)]="ADDED_CUSTOMER.country_code" (ngModelChange)="onInputChange()"/>
-                    <mat-icon matPrefix class="op-5">
-                      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                        fill="#5f6368">
-                        <path
-                          d="M798-120q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z" />
-                      </svg>
-                    </mat-icon>
-                  </mat-form-field>
-                </div>
+        <!-- country code -->
+        <div class="col-md-4 d-flex flex-column">
+          <div class="d-flex align-items-center">
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Country Code</mat-label>
+          </div>
+          <mat-form-field appearance="outline" class="w-100">
+            <input matInput placeholder="Country Code" [(ngModel)]="ADDED_CUSTOMER.country_code"
+              (ngModelChange)="onInputChange()" />
+            <mat-icon matPrefix class="op-5">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                fill="#5f6368">
+                <path
+                  d="M798-120q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z" />
+              </svg>
+            </mat-icon>
+          </mat-form-field>
+        </div>
         <!-- PHONE-->
         <div class="col-md-4 d-flex flex-column">
           <div class="d-flex align-items-center">
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Phone</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Phone" [(ngModel)]="ADDED_CUSTOMER.number" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="Phone" [(ngModel)]="ADDED_CUSTOMER.number" (ngModelChange)="onInputChange()" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -134,45 +139,45 @@
   <mat-card-content class="p-24">
 
     @if(show_shimmer){
-      <app-table-shimmer [headers]="displayedColumns"></app-table-shimmer>
-      }
-  
-      @else{
+    <app-table-shimmer [headers]="displayedColumns"></app-table-shimmer>
+    }
+
+    @else{
     <div class="table-responsive">
       <table mat-table [dataSource]="CUSTOMERS_ARRAY" class="w-100">
         <!-- First Name Column -->
         <ng-container matColumnDef="firstname">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">First Name</th>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">First Name</th>
           <td mat-cell *matCellDef="let customer" class="f-s-14">{{ customer.first_name }}</td>
         </ng-container>
 
         <!-- Last Name Column -->
         <ng-container matColumnDef="lastname">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Last Name</th>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Last Name</th>
           <td mat-cell *matCellDef="let customer" class="f-s-14">{{ customer.last_name }}</td>
         </ng-container>
 
         <!-- First Name Column -->
         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Email</th>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Email</th>
           <td mat-cell *matCellDef="let customer" class="f-s-14">{{ customer.email }}</td>
         </ng-container>
 
         <!-- Phone Column -->
         <ng-container matColumnDef="phone">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Phone</th>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Phone</th>
           <td mat-cell *matCellDef="let customer" class="f-s-14">{{ customer.number }}</td>
         </ng-container>
 
         <!-- Company name Column -->
         <ng-container matColumnDef="companyname">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Company Name</th>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Company Name</th>
           <td mat-cell *matCellDef="let customer" class="f-s-14">{{ customer.company_name }}</td>
         </ng-container>
 
         <!-- Actions Column -->
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Actions</th>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Actions</th>
           <td mat-cell *matCellDef="let customer" class="action-link">
             <a class="m-r-10 cursor-pointer">
               <i-tabler (click)="SELECT_CUSTOMER(customer)" name="edit" class="icon-18"></i-tabler>
@@ -187,19 +192,13 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </div>
-  }
+    }
 
     <!--  LENGTH & PAGE-SIZE: 1-PAGE-SIZE of LENGTH -->
-          <!-- pageSize : Items Per Page -->
-
-    <mat-paginator 
-    [pageSizeOptions]="[10, 20, 30]" 
-    [length]="CUSTOMMERS_ARRAY_LENGTH" 
-    [pageSize]="pageSize"
-    aria-label="Select page" 
-    showFirstLastButtons 
-    (page)="onPageChange($event)">
-  </mat-paginator>
+    <!-- pageSize : Items Per Page -->
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]" [length]="CUSTOMMERS_ARRAY_LENGTH" [pageSize]="pageSize"
+      aria-label="Select page" showFirstLastButtons (page)="onPageChange($event)">
+    </mat-paginator>
 
 
   </mat-card-content>
