--- a/src/app/pages/apps/users/users.component.html
+++ b/src/app/pages/apps/users/users.component.html
@@ -6,13 +6,13 @@
     <mat-card-content>
       <!-- FIRST ROW :  FIRST NAME + LAST NAME  -->
       <div class="row">
-         <!-- First Name -->
-         <div class="col-md-6 d-flex flex-column">
+        <!-- First Name -->
+        <div class="col-md-6 d-flex flex-column">
           <div class="d-flex align-items-center">
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">First Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="FIRST NAME" [(ngModel)]="selectedUser.firstname" />
+            <input matInput placeholder="FIRST NAME" [(ngModel)]="ADDED_UER.first_name" (ngModelChange)="onInputChange()"/>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -28,7 +28,7 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Last Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="LAST NAME" [(ngModel)]="selectedUser.lastname" />
+            <input matInput placeholder="LAST NAME" [(ngModel)]="ADDED_UER.last_name" (ngModelChange)="onInputChange()"/>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -48,7 +48,7 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Email</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="EMAIL" [(ngModel)]="selectedUser.email" />
+            <input matInput placeholder="EMAIL" [(ngModel)]="ADDED_UER.email" (ngModelChange)="onInputChange()"/>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -64,9 +64,9 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Role</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-select placeholder="ROLE" required [(ngModel)]="selectedUser.type">
+            <mat-select placeholder="ROLE" required [(ngModel)]="ADDED_UER.role" (ngModelChange)="onInputChange()">
               <mat-option value="Office">Office</mat-option>
-              <mat-option value="Admin">Admin</mat-option>
+              <mat-option value="user">user</mat-option>
             </mat-select>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
@@ -102,40 +102,46 @@
 
 <mat-card class="cardWithShadow">
   <mat-card-content class="p-24">
+
+    @if(show_shimmer){
+    <app-table-shimmer [headers]="displayedColumns"></app-table-shimmer>
+    }
+
+    @else{
     <div class="table-responsive">
-      <table mat-table [dataSource]="admins" class="w-100">
+      <table mat-table [dataSource]="USERS_ARRAY" class="w-100">
         <!-- First Name Column -->
         <ng-container matColumnDef="firstname">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">First Name</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.firstname }}</td>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">First Name</th>
+          <td mat-cell *matCellDef="let user" class="p-x-24 f-s-14 p-l-0">{{ user.first_name }}</td>
         </ng-container>
 
         <!-- Last Name Column -->
         <ng-container matColumnDef="lastname">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Last Name</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.lastname }}</td>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Last Name</th>
+          <td mat-cell *matCellDef="let user" class="p-x-24 f-s-14 p-l-0">{{ user.last_name }}</td>
         </ng-container>
 
         <!-- First Name Column -->
         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Email</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.email }}</td>
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Email</th>
+          <td mat-cell *matCellDef="let user" class="p-x-24 f-s-14 p-l-0">{{ user.email }}</td>
         </ng-container>
 
         <!-- User Type Column -->
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Type</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.type }}</td>
+        <ng-container matColumnDef="role">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">role</th>
+          <td mat-cell *matCellDef="let user" class="p-x-24 f-s-14 p-l-0">{{ user.role }}</td>
         </ng-container>
 
         <!-- Actions Column -->
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Action</th>
-          <td mat-cell *matCellDef="let admin" class="action-link">
-            <a (click)="SELECT_USER(admin)" class="m-r-10 cursor-pointer">
+          <th mat-header-cell *matHeaderCellDef  class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">Action</th>
+          <td mat-cell *matCellDef="let user" class="action-link">
+            <a (click)="SELECT_USER(user)" class="m-r-10 cursor-pointer">
               <i-tabler name="edit" class="icon-18"></i-tabler>
             </a>
-            <a (click)="OPEN_DIALOG('Delete', admin)" class="m-r-10 cursor-pointer">
+            <a (click)="OPEN_DIALOG('Delete', user)" class="m-r-10 cursor-pointer">
               <i-tabler name="trash" class="icon-18"></i-tabler>
             </a>
           </td>
@@ -145,8 +151,13 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </div>
+    }
 
-    <mat-paginator [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
+    <!--  LENGTH & PAGE-SIZE: 1-PAGE-SIZE of LENGTH -->
+    <!-- pageSize : Items Per Page -->
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]" [length]="USERS_ARRAY_LENGTH" [pageSize]="pageSize"
+      aria-label="Select page" showFirstLastButtons (page)="onPageChange($event)">
+    </mat-paginator>
 
   </mat-card-content>
 </mat-card>
