--- a/src/app/pages/apps/users/users.component.html
+++ b/src/app/pages/apps/users/users.component.html
@@ -6,13 +6,13 @@
     <mat-card-content>
       <!-- FIRST ROW :  FIRST NAME + LAST NAME  -->
       <div class="row">
-        <!-- First Name -->
+        <!-- FIRST NAME -->
         <div class="col-md-6 d-flex flex-column">
           <div class="d-flex align-items-center">
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">First Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="FIRST NAME" [(ngModel)]="ADDED_UER.first_name" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="First Name" [(ngModel)]="ADDED_USER.first_name" (ngModelChange)="onInputChange()"/>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -28,7 +28,7 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Last Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="LAST NAME" [(ngModel)]="ADDED_UER.last_name" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="Last Name" [(ngModel)]="ADDED_USER.last_name" (ngModelChange)="onInputChange()"/>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -48,7 +48,7 @@
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Email</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="EMAIL" [(ngModel)]="ADDED_UER.email" (ngModelChange)="onInputChange()"/>
+            <input matInput placeholder="Email" [(ngModel)]="ADDED_USER.email" (ngModelChange)="onInputChange()"/>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -58,15 +58,15 @@
             </mat-icon>
           </mat-form-field>
         </div>
-        <!-- Permission-->
+        <!-- ROLE-->
         <div class="col-md-6 d-flex flex-column">
           <div class="d-flex align-items-center">
             <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Role</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-select placeholder="ROLE" required [(ngModel)]="ADDED_UER.role" (ngModelChange)="onInputChange()">
+            <mat-select placeholder="Role" required [(ngModel)]="ADDED_USER.role" (ngModelChange)="onInputChange()">
               <mat-option value="Office">Office</mat-option>
-              <mat-option value="user">user</mat-option>
+              <mat-option value="Admin">Admin</mat-option>
             </mat-select>
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
