--- a/src/app/pages/apps/purchase/suppliers/suppliers.component.html
+++ b/src/app/pages/apps/purchase/suppliers/suppliers.component.html
@@ -41,10 +41,10 @@
         <!-- COMPANY NAME -->
         <div class="col-md-4 d-flex flex-column">
           <div class="d-flex align-items-center">
-            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Company Name (optional)</mat-label>
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Company Name</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Company Name (OPTIONAL)" [(ngModel)]="selectedSupplier.companyname" />
+            <input matInput placeholder="Company Name" [(ngModel)]="selectedSupplier.companyname" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -56,8 +56,24 @@
         </div>
       </div>
 
-      <!-- SECOND ROW :  EMAIL + PHONE + SALE -->
+      <!-- SECOND ROW :  EMAIL + PHONE + CONTACT NAME -->
       <div class="row">
+        <!-- CONTACT NAME-->
+        <div class="col-md-4 d-flex flex-column">
+          <div class="d-flex align-items-center">
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Contact Name</mat-label>
+          </div>
+          <mat-form-field appearance="outline" class="w-100">
+            <input matInput placeholder="Contact Name (OPTIONAL)" [(ngModel)]="selectedSupplier.contactname" />
+            <mat-icon matPrefix class="op-5">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
+                fill="#5f6368">
+                <path
+                  d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z" />
+              </svg>
+            </mat-icon>
+          </mat-form-field>
+        </div>
         <!-- EMAIL-->
         <div class="col-md-4 d-flex flex-column">
           <div class="d-flex align-items-center">
@@ -77,10 +93,10 @@
         <!-- PHONE-->
         <div class="col-md-4 d-flex flex-column">
           <div class="d-flex align-items-center">
-            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Phone</mat-label>
+            <mat-label class="mat-subtitle-2 f-w-600 d-block m-b-16">Phone (optional)</mat-label>
           </div>
           <mat-form-field appearance="outline" class="w-100">
-            <input matInput placeholder="Phone" [(ngModel)]="selectedSupplier.phone" />
+            <input matInput placeholder="Phone (OPTIONAL)" [(ngModel)]="selectedSupplier.phone" />
             <mat-icon matPrefix class="op-5">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                 fill="#5f6368">
@@ -114,53 +130,85 @@
 
 
 <mat-card class="cardWithShadow">
-  <mat-card-content class="p-24">
+    <!-- TABLE HEADER -->
+    <header>
+
+      <div class="searchbar p-20">
+        <mat-form-field appearance="outline" class="w-100">
+          <input matInput placeholder="Search Supplier ..." aria-label="Product">
+          <mat-icon matPrefix class="op-5">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-20 d-flex" height="24px" viewBox="0 -960 960 960"
+              width="24px" fill="#5f6368">
+              <path
+                d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+            </svg>
+          </mat-icon>
+        </mat-form-field>
+      </div>
+  
+    </header>
+
+  <mat-card-content>
+
     <div class="table-responsive">
       <table mat-table [dataSource]="suppliers" class="w-100">
         <!-- First Name Column -->
         <ng-container matColumnDef="firstname">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">First Name</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.firstname }}</td>
+          <td mat-cell *matCellDef="let supplier" class="f-s-14">{{ supplier.firstname }}</td>
         </ng-container>
 
         <!-- Last Name Column -->
         <ng-container matColumnDef="lastname">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Last Name</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.lastname }}</td>
+          <td mat-cell *matCellDef="let supplier" class="f-s-14">{{ supplier.lastname }}</td>
         </ng-container>
 
         <!-- First Name Column -->
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Email</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.email }}</td>
+          <td mat-cell *matCellDef="let supplier" class="f-s-14">{{ supplier.email }}</td>
         </ng-container>
 
         <!-- Phone Column -->
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Phone</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.phone }}</td>
+          <td mat-cell *matCellDef="let supplier" class="f-s-14">{{ supplier.phone }}</td>
         </ng-container>
 
         <!-- Company name Column -->
         <ng-container matColumnDef="companyname">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Company Name</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.companyname }}</td>
+          <td mat-cell *matCellDef="let supplier" class="f-s-14">{{ supplier.companyname }}</td>
+        </ng-container>
+
+        <!-- Contact name Column -->
+        <ng-container matColumnDef="contactname">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Contact Name</th>
+          <td mat-cell *matCellDef="let supplier" class="f-s-14">{{ supplier.contactname }}</td>
         </ng-container>
 
         <!-- Balance Column -->
         <ng-container matColumnDef="balance">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Balance</th>
-          <td mat-cell *matCellDef="let admin" class="f-s-14">{{ admin.balance }}</td>
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600" (click)="SORT('sale')">
+            Balance
+            <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
+            fill="#000000">
+            <path
+              d="M324-432v-294L219-621l-51-51 192-192 192 192-51 51-105-105v294h-72ZM600-96 408-288l51-51 105 105v-294h72v294l105-105 51 51L600-96Z" />
+          </svg>
+          </th>
+          <td mat-cell *matCellDef="let supplier" class="f-s-14">{{ supplier.balance }}</td>
         </ng-container>
 
         <!-- Actions Column -->
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Actions</th>
-          <td mat-cell *matCellDef="let admin" class="action-link">
+          <td mat-cell *matCellDef="let supplier" class="action-link">
             <a class="m-r-10 cursor-pointer">
-              <i-tabler (click)="SELECTED_SUPPLIER(admin)" name="edit" class="icon-18"></i-tabler>
+              <i-tabler (click)="SELECTED_SUPPLIER(supplier)" name="edit" class="icon-18"></i-tabler>
             </a>
-            <a (click)="OPEN_DIALOG('Delete', admin)" class="m-r-10 cursor-pointer">
+            <a (click)="OPEN_DIALOG('Delete', supplier)" class="m-r-10 cursor-pointer">
               <i-tabler name="trash" class="icon-18"></i-tabler>
             </a>
           </td>
