--- a/src/app/pages/apps/sale/create-sale/create-sale.component.html
+++ b/src/app/pages/apps/sale/create-sale/create-sale.component.html
@@ -149,11 +149,11 @@
   <div class="w-100 table-responsive">
     <table class="table table-responsive" mat-table [dataSource]="dataSource" class="mat-table">
       <!-- Item Name Column -->
-      <ng-container matColumnDef="itemName">
-        <th mat-header-cell *matHeaderCellDef> Item Name </th>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let element; let rowIndex = index;" [class.editing]="editRowIndex === rowIndex">
-          <input class="input-text" matInput [(ngModel)]="element.itemName"
-            (ngModelChange)="onEdit(element, 'itemName', $event, rowIndex)" />
+          <input class="input-text" matInput [(ngModel)]="element.name"
+            (ngModelChange)="onEdit(element, 'name', $event, rowIndex)" />
         </td>
       </ng-container>
 
