--- a/src/app/pages/apps/stock/adjust/adjust-dialog-content.html
+++ b/src/app/pages/apps/stock/adjust/adjust-dialog-content.html
@@ -7,7 +7,7 @@
       <!-- PRODUCT NAME -->
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
-          <input matInput placeholder="Product Name" [(ngModel)]="local_data.itemName" />
+          <input matInput placeholder="Product Name" [(ngModel)]="local_data.name" />
           <mat-icon matPrefix class="op-5">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
               <path
