--- a/src/app/pages/apps/stock/view/stock.component.html
+++ b/src/app/pages/apps/stock/view/stock.component.html
@@ -17,7 +17,7 @@
         </mat-icon>
       </mat-form-field>
     </div>
-    
+
     <!-- DROPDOWN -->
     <div class="filter-date p-20">
       <section>
@@ -58,6 +58,28 @@
         </div>
       </section>
 
+      <!-- STATUS -->
+      <div class="dropdown">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-select p placeholder="All" [(ngModel)]="selectedFilteraTION"
+            (selectionChange)="DROPDOWN_FILTERATION($event.value, 'status')">
+            @for(element of STOCK_Filter_array; track element) {
+            <mat-option value={{element.value}}>{{element.name}}</mat-option>
+            }
+
+          </mat-select>
+          <mat-icon matPrefix class="op-5">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+              <path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17
+                                0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83
+                                31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5
+                                156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93
+                                227q0 134 93 227t227 93Zm0-320Z" />
+            </svg>
+          </mat-icon>
+        </mat-form-field>
+      </div>
+
       <!-- Download As -->
       <div class="dropdown">
         <mat-form-field appearance="outline" class="w-100">
@@ -83,11 +105,11 @@
 
   <mat-card-content>
 
-      <!-- @if(show_shimmer){
+    @if(show_shimmer){
     <app-table-shimmer [headers]="displayedColumns"></app-table-shimmer>
-    } -->
+    }
 
-    <!-- @else{ -->
+    @else{
     <!-- TABLE BODY -->
     <div class="table-responsive">
       <table mat-table [dataSource]="stocksArray" multiTemplateDataRows>
@@ -101,15 +123,16 @@
             <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14 p-x-24 p-l-0">
               {{ column | titlecase }}
             </th>
-            
-            <td mat-cell *matCellDef="let element" class="p-x-24 f-s-14 p-l-0" (click)="EXPAND_ROW($event, element, column)">
+
+            <td mat-cell *matCellDef="let element" class="p-x-24 f-s-14 p-l-0"
+              (click)="EXPAND_ROW($event, element, column)">
 
               <!-- Check if the column is 'status' -->
               <ng-container *ngIf="column !== 'action'; else actionColumn">
                 <ng-container *ngIf="column !== 'barcode'; else barcodeColumn">
-                      <ng-container *ngIf="column !== 'cost'; else costColumn">
-                        {{ element[column] }}
-                      </ng-container>
+                  <ng-container *ngIf="column !== 'cost'; else costColumn">
+                    {{ element[column] }}
+                  </ng-container>
                 </ng-container>
               </ng-container>
 
@@ -129,7 +152,7 @@
           </ng-container>
 
         </ng-container>
-      }
+        }
         <!-- EXPANDED ROW DETAILS -->
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
@@ -138,7 +161,7 @@
                 <div class="detail-body mt-3">
                   <div class="col-md-4">
                     <div class="detail-field"><strong>category:</strong> {{ element.category }}</div>
-                    <div class="detail-field"><strong>itemName:</strong> {{ element.itemName }}</div>
+                    <div class="detail-field"><strong>name:</strong> {{ element.name }}</div>
                     <div class="detail-field"><strong>description:</strong> {{ element.description }}</div>
                   </div>
                   <div class="col-md-4">
@@ -176,18 +199,13 @@
 
       </table>
     </div>
-    <!-- } -->
+    }
     <!-- TABLE PAGINATION -->
     <!-- LENGTH : 1-10 of length -->
     <!-- pageSize : Items Per Page -->
-    <mat-paginator
-    [pageSizeOptions]="[10, 20, 30]" 
-    [length]="totalCount" 
-    [pageSize]="pageSize"
-    aria-label="Select page"
-    showFirstLastButtons 
-    (page)="onPageChange($event)">
-   </mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]" [length]="totalCount" [pageSize]="pageSize" aria-label="Select page"
+      showFirstLastButtons (page)="onPageChange($event)">
+    </mat-paginator>
   </mat-card-content>
 
 </mat-card>
