--- a/src/app/pages/apps/users/users.component.html
+++ b/src/app/pages/apps/users/users.component.html
@@ -155,7 +155,10 @@
 
     <!--  LENGTH & PAGE-SIZE: 1-PAGE-SIZE of LENGTH -->
     <!-- pageSize : Items Per Page -->
-    <mat-paginator [pageSizeOptions]="[10, 20, 30]" [length]="USERS_ARRAY_LENGTH" [pageSize]="pageSize"
+    <mat-paginator 
+    [pageSizeOptions]="[10, 20, 30]" 
+    [length]="USERS_ARRAY_LENGTH"
+     [pageSize]="pageSize"
       aria-label="Select page" showFirstLastButtons (page)="onPageChange($event)">
     </mat-paginator>
 
